# pan-scm-ansible-collection

./: .gitignore  .yamllint  CONTRIBUTING.md  ISSUES.md  pyproject.toml
pan_scm_ansible_collection/: README.md  galaxy.yml  requirements.txt
pan_scm_ansible_collection/plugins/module_utils/: api_spec.py  authenticate.py  serialize_response.py
pan_scm_ansible_collection/plugins/modules/: address.py  address_group.py  application.py  application_group.py  example.py  service.py  service_group.py  tag.py
scripts/: build.py
tests/: ansible.cfg  test_address.yaml  test_address_groups.yaml  test_address_objects.yaml  test_application_group.yaml  test_applications.yaml  test_service.yaml  test_service_groups.yaml  test_tag.yaml
